WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154099
Focus rings around text fields do not follow contour (border-radius)
https://bugs.webkit.org/show_bug.cgi?id=154099
Summary
Focus rings around text fields do not follow contour (border-radius)
alan
Reported
2016-02-10 19:16:05 PST
outline: auto painting (focusring) should follow the curve of border-radius.
Attachments
WIP
(17.04 KB, patch)
2016-02-22 11:08 PST
,
alan
no flags
Details
Formatted Diff
Diff
outline-offset: 20px
(44.34 KB, image/png)
2016-02-22 11:14 PST
,
alan
no flags
Details
Outline-offset: 3px
(41.71 KB, image/png)
2016-02-22 11:14 PST
,
alan
no flags
Details
outline-offset: 10px -multiline
(58.92 KB, image/png)
2016-02-22 11:15 PST
,
alan
no flags
Details
Patch
(36.83 KB, patch)
2016-03-11 17:53 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(37.77 KB, patch)
2016-03-12 08:29 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2016-02-22 11:08:00 PST
Created
attachment 271930
[details]
WIP
alan
Comment 2
2016-02-22 11:14:13 PST
Created
attachment 271932
[details]
outline-offset: 20px
alan
Comment 3
2016-02-22 11:14:36 PST
Created
attachment 271933
[details]
Outline-offset: 3px
alan
Comment 4
2016-02-22 11:15:01 PST
Created
attachment 271934
[details]
outline-offset: 10px -multiline
Tim Horton
Comment 5
2016-03-04 12:06:46 PST
Comment on
attachment 271930
[details]
WIP View in context:
https://bugs.webkit.org/attachment.cgi?id=271930&action=review
> Source/WebCore/platform/graphics/PathUtilities.cpp:394 > + static const float gCircleControlPoint = 0.447715f;
g :| This should probably mention where it came from. Or, even better, expose it on Path. Or something.
alan
Comment 6
2016-03-11 17:53:02 PST
Created
attachment 273790
[details]
Patch
Tim Horton
Comment 7
2016-03-11 17:59:30 PST
Comment on
attachment 273790
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=273790&action=review
> Source/WebCore/platform/graphics/PathUtilities.h:40 > + static Path pathWithShrinkWrappedRectsForOutline(const Vector<FloatRect>&, const BorderData&, float outlineOffset, bool leftToRightWritingMode, bool horizontalWritingMode);
Do we not have nice enums for the bools?
> LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-horizontal-ltr.html:8 > + color: RGBA(0, 0, 0, 0);
I think people usually write rgba() not RGBA()
> LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-horizontal-ltr.html:18 > + outline-offset: 0px;
Twice?
> LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-vertical-ltr.html:19 > + outline-offset: 0px;
Again
> LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-vertical-ltr.html:25 > + border-radius: 15px 4px 8px 5px;
Indentation is broken here
> LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-vertical-rtl.html:8 > + font-size: 20px;
Indentation again?
alan
Comment 8
2016-03-12 08:29:58 PST
Created
attachment 273836
[details]
Patch
alan
Comment 9
2016-03-12 08:30:48 PST
rdar://problem/9988429
alan
Comment 10
2016-03-12 08:30:59 PST
(In reply to
comment #7
)
> Comment on
attachment 273790
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=273790&action=review
> > > Source/WebCore/platform/graphics/PathUtilities.h:40 > > + static Path pathWithShrinkWrappedRectsForOutline(const Vector<FloatRect>&, const BorderData&, float outlineOffset, bool leftToRightWritingMode, bool horizontalWritingMode); > > Do we not have nice enums for the bools? > > > LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-horizontal-ltr.html:8 > > + color: RGBA(0, 0, 0, 0); > > I think people usually write rgba() not RGBA() > > > LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-horizontal-ltr.html:18 > > + outline-offset: 0px; > > Twice? > > > LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-vertical-ltr.html:19 > > + outline-offset: 0px; > > Again > > > LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-vertical-ltr.html:25 > > + border-radius: 15px 4px 8px 5px; > > Indentation is broken here > > > LayoutTests/fast/inline/hidpi-outline-auto-with-border-radius-vertical-rtl.html:8 > > + font-size: 20px; > > Indentation again?
Done.
alan
Comment 11
2016-03-12 08:31:33 PST
***
Bug 69195
has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 12
2016-03-12 09:24:10 PST
Comment on
attachment 273836
[details]
Patch Clearing flags on attachment: 273836 Committed
r198062
: <
http://trac.webkit.org/changeset/198062
>
WebKit Commit Bot
Comment 13
2016-03-12 09:24:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug