Source/WebCore/platform/graphics/PathUtilities.h
@@ -27,14 +27,18 @@
 #define PathUtilities_h
 
 #include "Path.h"
+#include "WritingMode.h"
 #include <wtf/Vector.h>
 
 namespace WebCore {
-
+class BorderData;
+    
 class PathUtilities {
 public:
     WEBCORE_EXPORT static Path pathWithShrinkWrappedRects(const Vector<FloatRect>& rects, float radius);
     WEBCORE_EXPORT static Vector<Path> pathsWithShrinkWrappedRects(const Vector<FloatRect>& rects, float radius);
+
+    static Path pathWithShrinkWrappedRectsForOutline(const Vector<FloatRect>&, const BorderData&, float outlineOffset, TextDirection, WritingMode);
 };
 
 }
